[metadata]
name = snovault-index
version = 1.0.0
description = Invalidation and indexing services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IGVF-DACC/snovault-index
project_urls =
    Bug Tracker = https://github.com/IGVF-DACC/snovault-index/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3>=1.24.79
    requests>=2.27.1
    opensearch-py==2.0.0
    opensearch-dsl==2.0.1

[options.extras_require]
test =
    pytest==5.3.2
    pytest-mock==2.0.0
    pytest-cov==2.8.1

[options.packages.find]
where = src